tooltip bug修好 / scrollbar可以拖曳/勾選增加highlight功能/增加 batchload+searchtext跳提示

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -69,12 +69,15 @@ $colors: (
 // scss-docs-start theme-color-variables
 $primary:       #29BFED;
 $secondary:     #737373 !default;
-$success:       $green !default;
+$success:       #35C099 !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
-$danger:        $red !default;
+$danger:        #FF3D00 !default;
 $light:         $gray-100 !default;
 $dark:          $gray-900 !default;
+:root {
+  --prim-rgb: 41, 149, 237;
+}
 // scss-docs-end theme-color-variables
 
 // scss-docs-start theme-colors-map
