--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -14,7 +14,7 @@ body {
     padding: 0;
     font-size: 14px;
 }
-ul{
+ul,p{
     margin: 0 !important;
     padding: 0 !important;
 }
